feat: Phase 1 — eliminate hot-path I/O for 1M files/day pipeline
PartnerCache (L1 ConcurrentHashMap + L2 Redis) replaces per-file DB
partner slug lookup. TransferRecordBatchWriter async batch INSERT
with 100ms flush replaces sync DB write. FlowRuleRegistryInitializer
now caches FileFlow entities alongside compiled rules (30s refresh).
FileUploadedEvent enriched with storageMode/partnerId/homeDir.
Source checksum deferred to storage-manager CAS response.

Includes full architecture analysis: docs/design/RULE-ENGINE-1M-FILES-DAY-ARCHITECTURE.md
(7-phase roadmap, 17 bottlenecks identified, capacity model for 1M/day).

All optimizations feature-flagged and backward-compatible.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>